        ===== Features

        [float]
        ===== Bug fixes

        [float]
        ===== Chores

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Fix ESM support: the "loader.mjs" file was accidentally not included in
  the published package in v3.48.0. ({pull}3534[#3534])

* Fix instrumentation of `@aws-sdk/client-s3` from v3.378.0 and up. The new version requires `@smithy/smithy-client`
  v2.0.1 and the agent was instrumeting it within the semver range '>=1 <2'.

* Fix wrapping of `http.request()` for node v18.17.0. Before this change, a
  call with a non-Function callback -- `http.request(urlString, {}, 'this-is-not-a-cb-function')`
  -- would accidentally *not* fail because of the agent's instrumentation.

* Fix tedious instrumentation to recognize "connection.prepare()" usage in
  tedious@16.2.0 and later.

[float]
===== Chores

* Inline the `elastic-apm-http-client` package code into this repo.
  ({issues}3506[#3506])


[[release-notes-3.48.0]]
==== 3.48.0 - 2023/07/07

*Known issue*: You must upgrade to 3.49.0 or later for the ESM support
described below to work, because the "loader.mjs" file was accidentally not
published.

[float]
===== Features

* Initial and experimental ECMAScript Module (ESM) support.
  With the following invocation the APM agent will now be able to instrument
  modules loaded via `import`. (See the https://nodejs.org/api/esm.html#introduction[Node.js introduction to ESM].)
+
[source,bash]
----
node -r elastic-apm-node/start.js \
  --experimental-loader=elastic-apm-node/loader.mjs \
  server.mjs

# or

NODE_OPTIONS='-r elastic-apm-node/start.js --experimental-loader=elastic-apm-node/loader.mjs'
node server.mjs
----
+