@@ -974,26 +974,6 @@ using the `(?-i)` prefix. These patterns apply to the request and response HTTP 
 
 The `sanitizeFieldNames` will redact any matched _field names_.  If you wish to filter or _redact_ other data the <<apm-add-filter,API filtering functions>> may be a better choice.
 
-[[filter-http-headers]]
-==== `filterHttpHeaders`
-
-[small]#Deprecated in: v3.46.0
-
-* *Type:* Boolean
-* *Default:* `true`
-* *Env:* `ELASTIC_APM_FILTER_HTTP_HEADERS`
-
-`filterHttpHeaders` indicates whether the agent should redact sensitive fields in the `Cookie` HTTP request
-header. If true, the `Cookie` header will be parsed in to the `transaction.request.cookies` name/value
-mapping and any cookie fields that match the patterns in <<sanitize-field-names>> will be replaced with the
-string `[REDACTED]`. If false, the `Cookie` header will be left as is.
-
-This config option is *deprecated* and will be removed in a future major version. Use <<sanitize-field-names>>
-instead. To replicate `filterHttpHeaders: false`, modify `sanitizeFieldNames` so that no patterns match
-cookie fields that you do not want redacted.
-
-See also <<apm-add-filter,the filtering API>> for programmatic control of filtering APM data.
-
 [[disable-instrumentations]]
 ==== `disableInstrumentations`
 
