@@ -256,9 +256,15 @@ declare namespace apm {
     disableSend?: boolean;
     elasticsearchCaptureBodyUrls?: Array<string>;
     environment?: string;
-    errorMessageMaxLength?: string; // DEPRECATED: use `longFieldMaxLength`.
+    /**
+     * @deprecated Use `longFieldMaxLength`
+     */
+    errorMessageMaxLength?: string;
     errorOnAbortedRequests?: boolean;
     exitSpanMinDuration?: string;
+    /**
+     * @deprecated Configuration 'filterHttpHeaders' is not used.
+     */
     filterHttpHeaders?: boolean;
     frameworkName?: string;
     frameworkVersion?: string;
