@@ -234,12 +234,9 @@ class Config {
       }
     }
 
-    // Warn agent consumer if it passed deprecated options via ENV, start options or config file.
-    const configSources = [envOptions, opts, confFileOpts];
-    for (let i = 0; i < configSources.length; i++) {
-      if (configSources[i] && 'filterHttpHeaders' in configSources[i]) {
-        this.logger.warn('the `filterHttpHeaders` config option is deprecated');
-      }
+    // Drop `filterHttpHeaders` option if it was passed to config via ENV, start options or config file.
+    if (this.filterHttpHeaders) {
+      delete this.filterHttpHeaders;
     }
 
     normalize(this, this.logger);
