@@ -62,9 +62,6 @@ const DEFAULTS = {
   environment: process.env.NODE_ENV || 'development',
   errorOnAbortedRequests: false,
   exitSpanMinDuration: '0ms',
-  // Deprecated: already filtered with `sanitizeFieldNames` defaults
-  // TODO: https://github.com/elastic/apm-agent-nodejs/issues/3332
-  filterHttpHeaders: true,
   globalLabels: undefined,
   ignoreMessageQueues: [],
   instrument: true,
@@ -159,9 +156,6 @@ const ENV_TABLE = {
   elasticsearchCaptureBodyUrls: 'ELASTIC_APM_ELASTICSEARCH_CAPTURE_BODY_URLS',
   errorMessageMaxLength: 'ELASTIC_APM_ERROR_MESSAGE_MAX_LENGTH',
   errorOnAbortedRequests: 'ELASTIC_APM_ERROR_ON_ABORTED_REQUESTS',
-  // Deprecated: already filtered with `sanitizeFieldNames` defaults
-  // TODO: https://github.com/elastic/apm-agent-nodejs/issues/3332
-  filterHttpHeaders: 'ELASTIC_APM_FILTER_HTTP_HEADERS',
   frameworkName: 'ELASTIC_APM_FRAMEWORK_NAME',
   frameworkVersion: 'ELASTIC_APM_FRAMEWORK_VERSION',
   globalLabels: 'ELASTIC_APM_GLOBAL_LABELS',
@@ -263,7 +257,6 @@ const BOOL_OPTS = [
   'contextPropagationOnly',
   'disableSend',
   'errorOnAbortedRequests',
-  'filterHttpHeaders',
   'instrument',
   'instrumentIncomingHTTPRequests',
   'logUncaughtExceptions',
