@@ -61,9 +61,7 @@ function getContextFromRequest(req, conf, type) {
       conf.sanitizeFieldNamesRegExp,
     );
 
-    // TODO: remove filterHttpHeaders option in next major release
-    // https://github.com/elastic/apm-agent-nodejs/issues/3332
-    if (conf.filterHttpHeaders && context.headers.cookie) {
+    if (context.headers.cookie) {
       context.cookies = cookie.parse(req.headers.cookie);
       context.cookies = redactKeysFromObject(
         context.cookies,
