@@ -136,9 +136,6 @@ var optionFixtures = [
   ['environment', 'ENVIRONMENT', 'development'],
   ['errorMessageMaxLength', 'ERROR_MESSAGE_MAX_LENGTH', undefined],
   ['errorOnAbortedRequests', 'ERROR_ON_ABORTED_REQUESTS', false],
-  // Config option deprecated. To be removed in next major release
-  // TODO: https://github.com/elastic/apm-agent-nodejs/issues/3332
-  ['filterHttpHeaders', 'FILTER_HTTP_HEADERS', true],
   ['frameworkName', 'FRAMEWORK_NAME'],
   ['frameworkVersion', 'FRAMEWORK_VERSION'],
   ['hostname', 'HOSTNAME'],
@@ -447,30 +444,6 @@ test('should log invalid booleans', function (t) {
   t.strictEqual(
     debug.message,
     'Elastic APM agent disabled (`active` is false)',
-  );
-
-  agent.destroy();
-  t.end();
-});
-
-test('it should log deprecated booleans', function (t) {
-  var agent = new Agent();
-  var logger = new MockLogger();
-
-  agent.start(
-    Object.assign({}, agentOptsNoopTransport, {
-      serviceName: 'foo',
-      secretToken: 'baz',
-      active: false,
-      filterHttpHeaders: false,
-      logger,
-    }),
-  );
-
-  var warning = findObjInArray(logger.calls, 'type', 'warn');
-  t.strictEqual(
-    warning.message,
-    'the `filterHttpHeaders` config option is deprecated',
   );
 
   agent.destroy();
